--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,12 @@
 }
 
 body{
-    background-image: url(../images/background.jpg);
+    background-image: url(../images/background-2.jpg);
     color: #f1f8e9;
 }
 
 h1, h2{
-    color: #c29100;
+    color: white;
     font-family: Roboto-Sans;
     font-style: oblique;
     margin: 8pt 0 8pt 5pt;
