--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,11 @@
 }
 
 body{
-    background-image: url(../images/background-2.jpg);
-    color: #f1f8e9;
+    background-image: url(../images/background.jpg);
 }
 
 h1, h2{
-    color: white;
+    color: black;
     font-family: Roboto-Sans;
     font-style: oblique;
     margin: 8pt 0 8pt 5pt;
@@ -28,72 +27,103 @@ img{
 
 .header-container{
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     letter-spacing: 1pt;
-    border-bottom: #c29100;
-    border-bottom-style: groove;
+    border: black;
+    border-width: 2px;
+    border-style: solid;
+    background-color: lightyellow;
 }
 
 .container-content{
+    background-color: lightyellow;
+}
+
+.beeComponent{
     display: flex;
-    background-color: #fff;
-    height: 1000px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 5px;
+    padding-bottom: 5px;
 }
 
-
-
-@media only screen and (max-width: 600px) {
-    .ham-icon{
-        display: flex;
-        margin: 0;
-    }
-    .container{
-        display: flex;
-        flex-direction: column;
-    }
-    .container-ham-menu{
-        display: none;
-        flex-direction: column;
-        background-color: #565656;
-        opacity: 0.9;
-    }
-    
-    .mainContainers{
-        
-        margin-top: 5px;
-    }
-    
-    .titles{
-        margin-left: 5px;
-    }
+.container-image{
+    width: 30%;
 }
 
-@media only screen and (min-width: 601px) {
-    .ham-icon{
-        display: none;
-        margin: 0;
-    }
-    .container{
-        display: flex;
-        flex-direction: column;
-    }
-    .container-ham-menu{
-        display: none;
-        flex-direction: column;
-        background-color: #565656;
-    }
-    
-    .mainContainers{
-        
-        margin-top: 5px;
-    }
-    
-    .titles{
-        margin-left: 5px;
-    }
+.container-beeText{
+    width: 40%;
+}
 
-    .container-content{
-        display: flex;
-        background-color: #fff;
-    }
+.containter-buttons{
+    width: 30%;
+}
+
+.beeImage{
+    width: 80px;
+    height: 100px;
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+    margin-left: 5px;
+    margin-top: 5px;
+    display: inline-block;
+}
+
+.containers{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+    padding-bottom: 10px;
+}
+
+.backContainer{
+    width: 20%;
+    display: none;
+}
+
+.titleContainer{
+    width: 80%;
+}
+
+.button{
+    height: 25px;
+    width: 90%;
+    background-color: black;
+    color: white;
+    margin-top: 5px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.backButton{
+    height: 50px;
+    width: 50px;
+    display: inline-block;
+    margin: 5px;
+}
+
+p.beeInfo{
+    font-weight: bold;
+    font-size: x-small;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+p.beeName{
+    font-weight: bold;
+    font-size: large;
+    margin-top: 5px;
+    margin-bottom: 5px ;
 }
