--- a/css/style.css
+++ b/css/style.css
@@ -83,10 +83,15 @@ img{
     border-color: black;
     border-width: 2px;
     border-style: solid;
-    padding-bottom: 10px;
+    /*padding-bottom: 10px;*/
 }
 
-.backContainer{
+.backContainerShow{
+    width: 20%;
+    display: inline-block;
+}
+
+.backContainerHide{
     width: 20%;
     display: none;
 }
@@ -127,3 +132,87 @@ p.beeName{
     margin-top: 5px;
     margin-bottom: 5px ;
 }
+
+/***** POST PAGE STYLE *****/
+.postComponent{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 5px;
+
+    color: black;
+    background-color: white;
+}
+
+p.postTitle{
+    font-weight: bold;
+    font-size: larger;
+    margin: 10px;
+}
+
+p.postBody{
+    font-size: medium;
+    margin: 10px;
+}
+
+.commentComponent{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+    margin: 5px;
+    padding-bottom: 5px;
+    background-color: lightyellow;
+}
+
+p.commentTitle{
+    font-weight: bold;
+    font-size: medium;
+    margin: 5px;
+}
+
+p.commentBody{
+    font-size: small;
+    margin: 5px;
+}
+
+p.commentEmail{
+    font-weight: bold;
+    font-size: small;
+    margin: 5px;
+    margin-left: auto;
+}
+
+.newCommentButton{
+    background-color: black;
+    font-size: medium;
+    color: white;
+    width: 100%;
+    height: 40px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.newPostButton{
+    margin-top: 50px;
+    background-color: black;
+    font-size: large;
+    color: white;
+    width: 100%;
+    height: 40px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/***** POST PAGE STYLE END *****/
