--- a/css/style.css
+++ b/css/style.css
@@ -216,3 +216,57 @@ p.commentEmail{
 }
 
 /***** POST PAGE STYLE END *****/
+
+/***** ALBUM PAGE STYLE *****/
+.albumComponent{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 5px;
+    background-color: black;
+    color: white;
+}
+
+p.albumTitle{
+    font-weight: bold;
+    font-size: larger;
+    margin: 25px;
+    width: 100%;
+    text-align: center;
+}
+
+.photoComponent{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+    padding-bottom: 5px;
+    background-color: lightyellow;
+    color: black;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+p.photoTitle{
+    font-size: medium;
+    margin: 5px;
+    width: 100%;
+    text-align: center;
+}
+
+.photoImage{
+    height: 250px;
+    width: 250px;
+    display: flex;
+}
+
+
+/***** ALBUM PAGE STYLE END *****/
